# faststat

./: .readthedocs.yaml  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  test.py
.github/workflows/: github-ci.yaml
_modules/: index.html
_modules/faststat/: faststat.html
_sources/: index.txt
doc/: Makefile  conf.py  index.rst  make.bat
faststat/: __init__.py  _faststat.c  _faststat.pyx  cache.py  faststat.html  faststat.py  faststat_core.c  format.py  profiler.py  qdigest.h  test.py  test2.py
faststat-core/: Cargo.toml
faststat-core/src/: lib.rs
faststat-rs/: Cargo.toml
faststat-rs/src/: lib.rs
test/: biased_quantile_stream.py  test_profiler.py
