[package]
name = "faststat-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "_faststat"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "gil-refs", "py-clone"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_System_SystemInformation"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
